// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadProgressBar should render 1`] = `
<div>
  <div
    class=" undefined progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="progress-bar bg-success"
      role="progressbar"
      style="width: 0%;"
    >
      <span
        class="sr-only"
      >
        0
        % Complete
      </span>
    </div>
  </div>
</div>
`;

exports[`UploadProgressBar should render error 1`] = `
<div>
  <span
    class="text-danger"
  >
    File upload rejected
  </span>
</div>
`;

exports[`UploadProgressBar should render password verification button 1`] = `
<div>
  <span
    class="text-danger"
  >
    Encrypted files require a password
  </span>
  <div
    class="pwRequired"
  >
    <button
      class="btn btn-primary btn-sm"
      type="button"
    >
      Enter password
    </button>
  </div>
</div>
`;

exports[`UploadProgressBar should render progress 1`] = `
<div>
  <div
    class=" undefined progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="progress-bar bg-success"
      role="progressbar"
      style="width: 50%;"
    >
      <span
        class="sr-only"
      >
        50
        % Complete
      </span>
    </div>
  </div>
</div>
`;

exports[`UploadProgressBar should render success 1`] = `
<div>
  <div
    class=" progress-complete progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="progress-bar bg-success"
      role="progressbar"
      style="width: 100%;"
    >
      <span
        class="sr-only"
      >
        100
        % Complete
      </span>
    </div>
  </div>
</div>
`;
